--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este parrafo es inicio</p>
+        <p>Se agrega un nuevo parrafo</p>
     </body>
 </html>
