--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Aqui vamos a hacer un blog post</h1>
         <p>Y este parrafo es inicio</p>
-        <p>Se agrega un nuevo parrafo</p>
+        <p>Se agrega un nuevo</p>
+        <p>Se agrega otro</p>
     </body>
 </html>
