--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,8 @@
         <div id="container">
             <div id="post">
                 <h1>Este es el titulo
-                    atractivo e interesante del post
+                    atractivo e interesante del 
+                    post
                 </h1>
                 <p>Y este es el parrado de 
                     inicio donde vamos a explicar 
