--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
                 </span>
             </div>
             <div id="post">
-                <h1>Este es el titulo
+                <h1>Este es el Encabezado
                     atractivo e interesante del 
                     post
                 </h1>
