--- a/blogpost.html
+++ b/blogpost.html
@@ -28,6 +28,7 @@
                     Excepto si eres un rockstar. Pero estadísticamente
                     no lo eres.... por ahora.
                 </p>
+                <p>Suscribete ahora</p>
             </div>
         </div>
     </body>
