--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Inicio del blog</title>
+        <title>Inicio del blog 2.0</title>
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
     <body>
