--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8" />
         <title>Inicio del blog 2.0</title>
         <link rel="stylesheet" href="./css/estilos.css">
     </head>
@@ -30,6 +31,12 @@
                 </p>
                 <p>Suscribete ahora</p>
             </div>
+            <footer>
+                <div>
+                    <p id="footer">Por Amor En El Encabezado</p>
+                </div>
+            </footer>
         </div>
     </body>
+
 </html>
