--- a/blogpost.html
+++ b/blogpost.html
@@ -18,19 +18,19 @@
                     atractivo e interesante del 
                     post
                 </h1>
-                <p>Y este es el parrado de 
+                <p>Y este es el parrafo de 
                     inicio donde vamos a explicar 
                     las cosas increibles
                     que pueden hacer las ramas
                 </p>
                 <p>
                     Los blogs son la mejor forma de compartir 
-                    informacion y tus ideas. Mucho mas que ir a 
+                    informació y tus ideas. Mucho mas que ir a 
                     conferencias o salir en Youtube.
                     Excepto si eres un rockstar. Pero estadísticamente
                     no lo eres.... por ahora.
                 </p>
-                <p>Suscribete ahora</p>
+                <p>Suscribete Ahora</p>
             </div>
             <footer>
                 <div>
